--- a/alacritty.yml
+++ b/alacritty.yml
@@ -199,9 +199,10 @@ font:
 # Colors (Tomorrow Night)
 colors:
   # Default colors
-  #primary:
-  #  background: '#1d1f21'
-  #  foreground: '#c5c8c6'
+  primary:
+    background:  '#ffffff'
+    foreground: '#222222'
+
 
     # Bright and dim foreground colors
     #
